--- a/test/WebContent/WEB-INF/web.xml
+++ b/test/WebContent/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-  <display-name>test</display-name>
+  <display-name>BBS_using_MongoDB_JavaScript</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -9,14 +9,12 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-
   <servlet>
-  	<servlet-name>bbs</servlet-name>
-  	<servlet-class>com.test.home.controller</servlet-class>
+    <servlet-name>bbs</servlet-name>
+    <servlet-class>com.test.home.controller</servlet-class>
   </servlet>
   <servlet-mapping>
-  	<servlet-name>bbs</servlet-name>
-  	<url-pattern>*.mon</url-pattern>
+    <servlet-name>bbs</servlet-name>
+    <url-pattern>*.mon</url-pattern>
   </servlet-mapping>
-  
 </web-app>
