--- a/test/WebContent/WEB-INF/web.xml
+++ b/test/WebContent/WEB-INF/web.xml
@@ -9,6 +9,7 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
   <servlet>
     <servlet-name>bbs</servlet-name>
     <servlet-class>com.test.home.controller</servlet-class>
@@ -17,4 +18,16 @@
     <servlet-name>bbs</servlet-name>
     <url-pattern>*.mon</url-pattern>
   </servlet-mapping>
+
+
+  <servlet>
+    <servlet-name>Reply</servlet-name>
+    <servlet-class>com.test.test1.Reply1</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Reply</servlet-name>
+    <url-pattern>*.rpl</url-pattern>
+  </servlet-mapping>
+
+
 </web-app>
